<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY year "2024"> ]>

<resources>
    <string name="app_name">AlcalaSuena</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="friday">Viernes</string>
    <string name="june">junio</string>
    <string name="saturday">Sábado</string>
    <string name="sunday">Domingo</string>
    <string name="friday_abrev">VIE</string>
    <string name="saturday_abrev">SAB</string>
    <string name="sunday_abrev">DOM</string>
    <string name="bands">Bandas</string>
    <string name="map">Mapa</string>
    <string name="compartir">Compartir</string>

    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="filter">Filtrar</string>
    <string name="search_band">Buscar banda</string>
    <string name="no_results_found">No se han encontrado resultados para esa búsqueda</string>
    <string name="program">Programación</string>
    <string name="venues">Escenarios</string>
    <string name="about_alcalasuena">#AlcalaSuena</string>
    <string name="developed_by_insula">App y web desarrolladas como software libre por coworkers de la Ínsula Coworking</string>
    <string name="see_dossier">Ver dossier</string>
    <string name="favourites">Favoritos</string>
    <string name="no_favourites">No has marcado de momento ningún evento como favorito para este día.\n¡A qué esperas! Pulsa la estrella y hazte tu lista ;)</string>
    <string name="share_favs_with_friends">¡Comparte tu lista!</string>
    <string name="all_tags">Todos los estilos</string>
    <string name="share_favs_text_intro">¡Esta es mi lista de conciertos para el #AlcalaSuena!</string>
    <string name="no_results_for_tags">En este día no hay conciertos para los estilos de música elegidos :(</string>
    <string name="explanation_permission_location">Para utilizar el mapa necesitamos accceso al GPS. Gracias ;)</string>
    <string name="explanation_permission_storage">Para utilizar el mapa necesitamos accceso al almacenamiento. Gracias ;)</string>
    <string name="my_position">Mi posición</string>
    <string name="location_not_found">No se encuentra tu posición</string>
    <string name="title_activity_maps">Map</string>
    <string name="more_info">Mas información</string>
    <string name="indications">Indicaciones</string>
    <string name="no_googlemaps_available">No se ha podido lanzar la app de Google Maps :(</string>
    <string name="venues_intro">Los espacios más emblemáticos de esta ciudad patrimonio se visten de fiesta en un festival particular en el que además de buena música, poder disfrutar de un entorno inigualable</string>
    <string name="bands_intro">Un festival participativo con más de 140 grupos actuando en calles y plazas del Casco Histórico de Alcalá, Patromonio de la Humanidad</string>
    <string name="hashtag_alcalasuena">#AlcalaSuena</string>
    <string name="minutes">minutos</string>


    <string name="meet_the_place">Conoce el lugar</string>
    <string name="gigs">Conciertos</string>
    <string name="venue">Escenario</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro0">¡A punto de empezar el festival más importante de Alcalá! ¿Preparad@?\n\nSi quieres potenciar todavía mas tu experiencia, sigue esta breve introducción para conocer lo que puedes hacer con esta APP...</string>
    <string name="intro1">Conoce toda la programación actualizada de conciertos en cada día y despliega el panel lateral para filtrar por los estilos de música que mas te gustan...</string>
    <string name="intro2">¡Haz tu propia programación de conciertos!\nPulsa en la estrella roja de cada uno para guardarlos como favoritos y cuando quieras ver sólo los tuyos, pulsa en la estrella blanca de la barra superior.\nPodrás además mandarlos a tus amig@s por la app que elijas ;) ...</string>
    <string name="intro3">En la sección de Mapa podrás ver geolocalizado cada escenario del festival y pulsando el marcador verás su descripción básica y en enlace para indicarte el camino...\nNo te vayas a perder :P</string>
    <string name="intro4">Navega por el resto de secciones para tener toda la información de Bandas y Escenarios...\nQue la disfrutes ;)\n\n¡Nos vemos en el #AlcalaSuena!</string>
    <string name="how_to_arrive">Cómo llegar</string>
    <string name="about_app">Sobre la app</string>
    <string name="insula_coworking">Ínsula Coworking</string>

    <string name="text_about_insula">Esta aplicación de Android y la web interactiva www.alcalasuena.es nacieron en 2017 por iniciativa colectiva de un grupo de informáticos y diseñadores de la Ínsula Coworking.\n\nGracias a la buena acogida y los comentarios positivos que nos habéis dado, este año cuenta con el apoyo del Ayuntamiento de Alcalá para seguir mejorando.</string>

    <string name="joseba_info">Joseba Saenz de Navarrete\nBackend y página web</string>
    <string name="roberto_info">Roberto Román Moran\nApp iOS</string>
    <string name="julio_info">Julio Berzal Carrascosa\nApp Android</string>
    <string name="collaborators_insula">Además hemos contado con la indispensable colaboración de varios miembros del coworking en tareas de control de calidad como detección de fallos y propuestas de mejora.</string>

    <string name="meet_us">Conócenos</string>
    <string name="telegram_channel">Canal de Telegram</string>
    <string name="news_channel">Canal de noticias</string>
    <string name="import_link_text">Manda este enlace a tus amigos para que marquen automáticamente tus favoritos y podáis ir juntos a los conciertos ;)\n\n%s</string>
    <string name="download_app_text">(Si todavía no tienen la app diles que la descarguen gratuitamente:\n\n- Android: %s\n\n- iOS: %s)</string>
    <string name="add_favs_events">Añadir conciertos favoritos</string>
    <string name="add">¡Añadir!</string>
    <string name="no_thanks">No, gracias</string>
    <string name="see_github_repositories">Ver repositorios en GitHub</string>
    <string name="hello_excl">¡Hola!</string>
    <string name="stay_in_app">Ya que estoy, me quedo</string>
    <string name="follow_link">Seguir enlace</string>
    <string name="funny_text_user_enter_with_wrong_link">El enlace que quieres ver tienes que abrirlo desde un navegador. Esta app solo recibe enlaces para añadir favoritos.\n\nEn cualquier caso, ¡un gusto tenerte por aquí! ;)\n\nElige qué quieres hacer</string>

    <string name="download_app_text_2">¡Bájate gratis la app para Android del Festival #AlcalaSuena!\n\n%s</string>
    <string name="news">Noticias</string>
    <string name="share_band">Compartir banda</string>
    <string name="send_band_text">¡Echa un ojo a esta banda!\n\n%s</string>
    <string name="share_app">¡Comparte la app de #AlcalaSuena!</string>
    <string name="share_app_text">¡Ya está disponible la app gratuita del festival #AlcalaSuena!\n\nToda la información de bandas, horarios, mapa de escenarios y noticias directas en tu teléfono.\n\nDescárgala gratis:\n- Android %s\n- iOS: %s</string>
    <string name="secret_key">Clave secreta</string>
    <string name="title">Título</string>
    <string name="text">Texto</string>
    <string name="camera">Cámara</string>
    <string name="gallery">Galería</string>
    <string name="need_write_permission">Para adjuntar imágenes se necesita aceptar este permiso</string>
    <string name="ok">OK</string>
    <string name="permission_denied">Permiso denegado</string>
    <string name="send_news">Enviar noticia</string>
    <string name="link_button_text">Texto botón de enlace</string>
    <string name="link">Enlace</string>
    <string name="news_sent">Noticia enviada</string>
    <string name="sending_news">Enviando noticia...</string>
    <string name="write_news">Escribe titulo y texto de la noticia</string>
    <string name="sending_notification">Enviando notificación...</string>
    <string name="notification_sent">Notificación enviada</string>
    <string name="send_notification">Enviar solo notificación</string>
    <string name="web">Abrir navegador</string>
    <string name="sponsor">Patrocina</string>
    <string name="amstel_recomends">Amstel recomienda\nel consumo responsable</string>
    <string name="enter_excl">¡Entrar!</string>
    <string name="empty_list_news">De momento en este año no hay noticias. ¡Pronto te avisaremos de todas las novedades!</string>
    <string name="preparing_app_edition_current_year">Preparando aplicación para la edición de &year;....\n¡Te avisaremos cuando esté lista!</string>
    <string name="new_version_available">¡Aplicación preparada!\nPulsa aquí para actualizar</string>
    <string name="location_wont_show">No se mostrará tu ubicación (puedes cambiar esta configuración en los ajustes)</string>
    <string name="location_permission">Permiso de acceso a localización</string>
    <string name="location_permission_rationale_message">Si quieres que se muestre tu ubicación en el mapa es necesario aceptar este permiso, si no tampoco pasa nada, se seguirán mostrando los escenarios en el mapa ;)</string>
    <string name="channel_novelties_push_name">Noticias de AlcalaSuena</string>
    <string name="channel_novelties_push_description">Todas las novedades directamente en tu móvil!</string>
    <string name="accuracy_enought_location_not_found">No se ha encontrado una localización suficientemente precisa</string>
    <string name="not_close_to_venue">No estás cerca de ningún escenario (acércate por lo menos a 100 metros)</string>
    <string name="code_released_gpl">El código fuente de esta plataforma está liberado con licencia GPL. Puedes verlo aquí:</string>
    <string name="developers">Desarrolladores</string>
    <string name="location_permission_rationale_happening_now_message">Para detectar el escenario más cercano es necesario que la app sepa donde te encuentras</string>
    <string name="link_error">Hay un error con este enlace</string>
    <string name="event_info">Información del evento</string>
    <string name="app_name_year">AlcaláSuena &year;</string>
    <string name="date_time_info_format">Día: %s\nHora: %s\nDuración: %s</string>
    <string name="buy_ticekts">Comprar entradas</string>
    <string name="data_not_prepared">Todavía no está creada la programación de conciertos. ¡Avisaremos cuando estén listos!</string>
    <string name="data_not_prepared_bands_ready">Lo que sí puedes ver son las bandas que participan\nPulsa el siguiente botón para verlas.</string>
    <string name="see_bands">Ver bandas</string>
    <string name="no_venues_data">Los datos de escenario se están preparando. ¡Te avisaremos cuando estén listos!</string>
    <string name="participate">Participa</string>
    <string name="notifications_permission_rationale_msg">A partir de la versión 13 de Android, el usuario tiene la opción de elegir qué notificaciones quiere recibir. Si quieres estar al día de las noticias del festival, acepta el permiso ;)</string>
    <string name="notifications_permission">Permiso de notificaciones</string>
    <string name="notifications_permission_denied">Has desactivado las notificaciones de AlcalaSuena</string>
    <string name="notifications_permission_granted">¡Notificaciones activadas!</string>
    <string name="more_bands_x">Y otras %d bandas...\n</string>
<!--    <string name="no_events_yet">Todavía no está creada la programación de conciertos. ¡En breve te avisaremos!</string>-->

</resources>
