<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    android:clickable="true"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        android:scaleType="centerCrop"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="#fff" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <LinearLayout
                android:id="@+id/btn_menu_bands"
                style="@style/LinearMenu">

                <ImageView
                    style="@style/ImageMenuIcon"
                    android:src="@mipmap/ic_menu_bands" />

                <TextView
                    style="@style/BtnMenu"
                    android:text="@string/bands" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_menu_venues"
                style="@style/LinearMenu">

                <ImageView
                    style="@style/ImageMenuIcon"
                    android:src="@mipmap/ic_menu_venues" />

                <TextView
                    style="@style/BtnMenu"
                    android:text="@string/venues" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/btn_menu_map"
                style="@style/LinearMenu">

                <ImageView
                    style="@style/ImageMenuIcon"
                    android:src="@mipmap/ic_menu_map" />

                <TextView
                    style="@style/BtnMenu"
                    android:text="@string/map" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_menu_news"
                style="@style/LinearMenu">

                <ImageView
                    style="@style/ImageMenuIcon"
                    android:src="@mipmap/ic_news" />

                <TextView
                    style="@style/BtnMenu"
                    android:text="@string/news" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_menu_about"
                style="@style/LinearMenu">

                <ImageView
                    style="@style/ImageMenuIcon"
                    android:src="@mipmap/ic_menu_info2" />

                <TextView
                    style="@style/BtnMenu"
                    android:text="@string/about_alcalasuena" />

            </LinearLayout>

            <!--<View style="@style/SeparatorHorizontal.Grey" />-->

            <LinearLayout
                android:id="@+id/btn_about_insula"
                style="@style/LinearMenu">

                <ImageView
                    style="@style/ImageMenuIcon"
                    android:src="@mipmap/logo_bullet" />

                <TextView
                    style="@style/BtnMenu"
                    android:text="@string/about_app" />

            </LinearLayout>

            <View style="@style/XpansorVert" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@mipmap/img_skyline_alcala"
                app:tint="@color/skyline" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/skyline"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/btn_logo_alcalasuena"
                        style="@style/ImageLogo"
                        android:src="@mipmap/img_logo_alcalasuena"
                        android:tag="https://alcalasuena.es/" />

                    <View style="@style/XpansorHoriz" />

                    <ImageView
                        android:id="@+id/btn_logo_alcalaesmusica"
                        style="@style/ImageLogo"
                        android:src="@mipmap/img_logo_alcalaesmusica"
                        android:tag="https://alcalaesmusica.org/" />

                    <View style="@style/XpansorHoriz" />

                    <ImageView
                        android:id="@+id/btn_logo_ayto_alcala"
                        style="@style/ImageLogo"
                        android:src="@mipmap/img_logo_ayto_alcala"
                        android:tag="https://www.ayto-alcaladehenares.es/" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextBase.Inverted"
                            android:text="@string/sponsor"
                            android:visibility="gone"/>

                        <ImageView
                            android:id="@+id/btn_logo_sziget"
                            style="@style/ImageLogo"
                            android:src="@mipmap/logo_sziget"
                            android:tag="https://szigetfestival.com/es/" />
                    </LinearLayout>

                    <View style="@style/XpansorHoriz" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextBase.Inverted"
                            android:text="@string/participate"
                            android:visibility="gone"/>

                        <ImageView
                            android:id="@+id/btn_logo_gigante"
                            style="@style/ImageLogo"
                            android:maxWidth="180dp"
                            android:src="@mipmap/logo_gigante"
                            android:tag="https://festivalgigante.com/" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>