<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_general">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@mipmap/img_chico_saxo_bg_transp"
        android:alpha="0.5"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transp_black"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <TextView
            style="@style/TextBase.Accent"
            android:gravity="center_horizontal"
            android:text="@string/bands_intro"
            android:padding="5dp"
            android:visibility="gone"/>



        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_search"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/search_band"
            android:padding="10dp"
            android:inputType="textFilter"
            android:gravity="center_horizontal"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccentTransp"
            android:textSize="20sp"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_bands"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/view_no_results"
                style="@style/TextBase.White"
                android:visibility="gone"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:text="@string/no_results_found"
                android:layout_margin="15dp"
                android:textSize="20sp"/>

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>