<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_general">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        android:src="@mipmap/img_logo_insula_black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="15dp">


                <TextView
                    style="@style/TextBase.Bold"
                    android:autoLink="all"
                    android:background="@color/cardBackground"
                    android:padding="10dp"
                    android:text="@string/text_about_insula" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@color/cardBackground"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        style="@style/TextTitle"
                        android:layout_margin="10dp"
                        android:text="Coworkers"
                        android:textColor="@color/grey_dark_general" />

                    <LinearLayout style="@style/LinearMenu">

                        <ImageView
                            style="@style/ImageMenuIcon"
                            android:src="@mipmap/logo_bullet" />

                        <TextView
                            style="@style/BtnMenu"
                            android:tag="http://www.chaotic-kingdoms.com/"
                            android:text="@string/joseba_info"
                            android:background="@drawable/background_pressed_custom" />

                    </LinearLayout>

                    <LinearLayout style="@style/LinearMenu">

                        <ImageView
                            style="@style/ImageMenuIcon"
                            android:src="@mipmap/logo_bullet" />

                        <TextView
                            style="@style/BtnMenu"
                            android:tag="http://www.introarte.net"
                            android:text="@string/jaime_info"
                            android:background="@drawable/background_pressed_custom" />

                    </LinearLayout>

                    <LinearLayout style="@style/LinearMenu">

                        <ImageView
                            style="@style/ImageMenuIcon"
                            android:src="@mipmap/logo_bullet" />

                        <TextView
                            style="@style/BtnMenu"
                            android:tag="http://mrmadbar.com/"
                            android:text="@string/vicente_info"
                            android:background="@drawable/background_pressed_custom"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_about_insula"
                        style="@style/LinearMenu">

                        <ImageView
                            style="@style/ImageMenuIcon"
                            android:src="@mipmap/logo_bullet" />

                        <TextView
                            style="@style/BtnMenu"
                            android:tag="http://triskelapps.com/"
                            android:text="@string/julio_info"
                            android:background="@drawable/background_pressed_custom"/>

                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        style="@style/TextTitle"
                        android:layout_margin="10dp"
                        android:text="Ínsula Coworking" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            style="@style/TextButton"
                            android:tag="http://insulacoworking.es/"
                            android:text="@string/meet_us"
                            android:textSize="16sp"/>

                        <Button
                            style="@style/TextButton"
                            android:tag="https://telegram.me/insulacoworking"
                            android:text="@string/news_channel"
                            android:textSize="16sp"
                            android:layout_marginLeft="20dp"/>
                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>